[project]
name = "bitnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gguf>=0.1.0",
    "numpy~=1.26.4",
    "protobuf>=4.21.0,<5.0.0",
    "sentencepiece~=0.2.0",
    "torch~=2.2.1",
    "transformers>=4.46.3,<5.0.0",
]

[tool.uv.sources]
gguf = { path = "3rdparty/llama.cpp/gguf-py" }
